testdata/baselines/reference/submodule/conformance/unicodeEscapesInJsxtags.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (1 errors) ====
    import * as React from "react";
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    declare global {
        namespace JSX {
            interface IntrinsicElements {
                "a-b": any;
                "a-c": any;
            }
        }
    }
    const Compa = (x: {x: number}) => <div>{"" + x}</div>;
    const x = { video: () => null }
    
    // unicode escape sequence is not allowed in tag name or JSX attribute name.
    // tag name:
    ; <\u0061></a>
    ; <\u0061-b></a-b>
    ; <a-\u0063></a-c>
    ; <Comp\u0061 x={12} />
    ; <x.\u0076ideo />
    ; <\u{0061}></a>
    ; <\u{0061}-b></a-b>
    ; <a-\u{0063}></a-c>
    ; <Comp\u{0061} x={12} />
    
    // attribute name
    ;<video data-\u0076ideo />
    ;<video \u0073rc="" />
    